--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,7 @@
 	\vspace{0.5em}
 
 	\begin{enumerate}
-		\item \textbf{Critical Points}: characterize all stationary/optimal points of the non-convex training objective.\pause
+		\item \textbf{Critical Points}: characterize all optimal points of the non-convex training objective.\pause
 
 		\item \textbf{Cone Decompositions}: develop new connections between convex training programs.\pause
 
@@ -202,15 +202,15 @@
 	\end{center}
 
 	\pause
-	\begin{itemize}
-		\item \textbf{Certificates}: stationary points are global minima.
+	%\begin{itemize}
+	%    \item \textbf{Certificates}: stationary points are global minima.
 
-		      \pause
-		\item \textbf{Model Churn}: strict/strong convexity gives uniqueness.
+	%          \pause
+	%    \item \textbf{Model Churn}: strict/strong convexity gives uniqueness.
 
-		      \pause
-		\item \textbf{Tuning}: line-search, full-batch methods, acceleration, etc.
-	\end{itemize}
+	%          \pause
+	%    \item \textbf{Tuning}: line-search, full-batch methods, acceleration, etc.
+	%\end{itemize}
 
 \end{frame}
 
@@ -572,7 +572,7 @@
 		\large
 		\textbf{Approach}:
 		\begin{enumerate}
-            \large
+			\large
 			\item \pause
 			      Characterize \green{convex reformulations} via model problem;
 			      \vspace{1ex}
